--- a/Filters/src/main/java/ru/nsu/fit/g16203/voloshina/view/dialog/DitheringDialog.form
+++ b/Filters/src/main/java/ru/nsu/fit/g16203/voloshina/view/dialog/DitheringDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.nsu.fit.g16203.voloshina.view.DitheringDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.nsu.fit.g16203.voloshina.view.dialog.DitheringDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="0" right="0"/>
     <constraints>
@@ -50,7 +50,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Число бит на цвет для красного"/>
+              <text value="Размер палитры для красного"/>
             </properties>
           </component>
           <component id="399d9" class="javax.swing.JLabel" binding="NgLabel">
@@ -58,7 +58,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Число бит на цвет для зеленого"/>
+              <text value="Размер палитры для зеленого"/>
             </properties>
           </component>
           <component id="d46b2" class="javax.swing.JLabel" binding="NbLabel">
@@ -66,7 +66,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Число бит на цвет для синего"/>
+              <text value="Размер палитры для синего"/>
             </properties>
           </component>
         </children>
